--- a/action.yml
+++ b/action.yml
@@ -10,15 +10,13 @@ inputs:
     default: bundletool.jar
   version:
     description: "Version range or exact version of a Python version to use, using SemVer's version range syntax."
-    default: 1.8.0
-  # architecture:
-  #   description: 'The target architecture (x86, x64) of the Python interpreter.'
+    default: '1.8.0'
   # token:
   #   description: Used to pull python distributions from actions/python-versions. Since there's a default, this is typically not supplied by the user.
   #   default: ${{ github.token }}
   # chown node:node
 runs:
   using: docker
-  image: docker://ghcr.io/swaglive/docker-bundletool:${{ inputs.version }}
+  image: 'docker://ghcr.io/swaglive/bundletool:${{ inputs.version }}'
   args:
   - ${{ inputs.path }}
