--- a/action.yml
+++ b/action.yml
@@ -13,7 +13,7 @@ inputs:
     default: bundletool.jar
 runs:
   using: docker
-  image: 'docker://ghcr.io/swaglive/bundletool:1.8.0'
+  image: 'docker://bash'
   entrypoint: wget
   args:
   - -O
