--- a/action.yml
+++ b/action.yml
@@ -10,6 +10,6 @@ inputs:
     default: bundletool.jar
 runs:
   using: docker
-  image: 'docker://ghcr.io/swaglive/bundletool:1.8.0'
+  image: docker://ghcr.io/swaglive/bundletool:1.8.0
   args:
   - ${{ inputs.path }}
